<resources>
    <string name="app_name">Black ICE Control</string>
    <string name="user_interface">User Interface</string>
    <string name="general_ui">General UI</string>
    <string name="lockscreen_options">Lockscreen options</string>
    <string name="power_menu_optons">Power menu options</string>
    <string name="functionality">Functionality</string>
    <string name="power_saver">Power saver</string>
    <string name="statusbar">Statusbar</string>
    <string name="general">General</string>
    <string name="toggles_layout">Toggles</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="tools">Start Tools &amp; Performance</string>
    <string name="weather">Weather</string>
    <string name="signal">Signal &amp; Wifi Options</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="menu_lockscreens_remove_wallpaper">Reset lockscreen wallpaper</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_weather_get_weather">Get weather</string>
    <string name="header_summary_battery">Battery bar, 1% battery mod, etc</string>
    <string name="header_summary_general_ui">Boot animation, bug mailer, rotation, IME switcher, etc</string>
    <string name="header_summary_navigation_bar">Buttons to display, nav bar color, order</string>
    <string name="header_summary_lockscreens">Custom lockscreen layouts and more</string>
    <string name="header_summary_power_menu">What to display in your power menu</string>
    <string name="header_summary_general">Settings button behavior</string>
    <string name="header_summary_toggles">Customize toggles</string>
    <string name="header_summary_clock">Clock location, AM/PM style, color</string>
    <string name="header_summary_weather">Enable/disable, set custom location or network, and interval</string>
    <string name="header_summary_signal">Change network and wifi signal bars to text with color picker</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove your menu buttons if you\'re using the big menu button!</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navigation_bar_tint_title">Navigation button color</string>
    <string name="navigation_bar_tint_summary">Sets the color of the navbar buttons including custom images too.</string>
    <string name="nav_button_background_color_title">Navbar background color</string>
    <string name="nav_button_background_color_summary">Sets the color of navbar background.</string>
    <string name="navigation_bar_glow_tint_title">Navigation btn pressed glow color</string>
    <string name="navigation_bar_glow_tint_summary">When you press on a button, there is a glow. Use this to change the color of the glow.</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">How and when do you want the menu buttons to appear?</string>
    <string name="navbar_order_title">Navigation button order</string>
    <string name="navbar_order_summary">Customize the order of your soft keys</string>
    <string name="navbar_button_cat">Navigation bar buttons</string>
    <string name="navbar_qty_title">Navigation button quantity</string>
    <string name="navbar_qty_summary">Choose the number of navigation buttons</string>
    <string name="enabled_navbar_buttons_title">Enabled buttons</string>
    <string name="enabled_navbar_buttons_summary">Choose which soft keys you would like to see</string>
    <string name="navbar_action_title">Button %1$s action &amp; icon</string>
    <string name="navbar_longpress_title">Button %1$s longpress action</string>
    <string name="navbar_action_home">Home</string>
    <string name="navbar_action_back">Back</string>
    <string name="navbar_action_recents">Recents</string>
    <string name="navbar_action_search">Search</string>
    <string name="navbar_action_menu">Menu</string>
    <string name="navbar_action_kill">Kill task</string>
    <string name="navbar_action_power">Power</string>
    <string name="navbar_action_none">Empty</string>
    <string name="navbar_enable_bar">Enable bar</string>
    <string name="navbar_widgets">Navigation Bar Widgets</string>
    <string name="navbar_widgets_reset">Reset navbar widgets</string>
    <string name="navbar_enable_dialog_title">Reboot required!</string>
    <string name="navbar_enable_dialog_msg">Please reboot to enable/disable the navigation bar properly!</string>
    <string name="navbar_enable_dialog_negative">I\'ll reboot later</string>
    <string name="navbar_enable_dialog_Positive">Reboot now!</string>
    <string name="button_transparency_title">Nav button transparency</string>
    <string name="long_press_home_title">Long press home action</string>
    <string name="long_press_home_summary">What to do when long pressing the home softkey. Reboot required to reflect changes.</string>
    <string name="glow_times_title">Button glow animation</string>
    <string name="glow_times_off">Off</string>
    <string name="glow_times_superquick">Super quick</string>
    <string name="glow_times_quick">Quick</string>
    <string name="combined_bar_auto_hide_title">Auto Hide</string>
    <string name="combined_bar_auto_hide_summary">Allow Combined Bar to hide when showing a fullscreen app</string>
    <string name="navigation_bar_height_title">Navigation bar height</string>
    <string name="navigation_bar_height_summary">Sets the width of navbar in portrait</string>
    <string name="navigation_bar_width_title">Navigation bar width</string>
    <string name="navigation_bar_width_summary">Sets the width of navbar in landscape</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="title_settings_behavior">Use default settings behavior</string>
    <string name="summary_settings_behavior">Default behavior is to long press for toggles, press for settings. Uncheck to press for toggles, long press for settings</string>
    <string name="title_auto_hide_toggles">Auto hide toggles</string>
    <string name="summary_auto_hide_toggles">After collapse toggles will hide</string>
    <string name="title_status_bar_brightness_toggle">Enable brightness control</string>
    <string name="summary_status_bar_brightness_toggle">Slide finger slowly across statusbar to adjust brightness setting</string>
    <string name="adb_icon_title">Enable USB debugging icon</string>
    <string name="statusbar_layout">Notification drawer layout</string>
    <string name="statusbar_layout_summary">Change the notification drawer layout (requires UI restart)</string>
    <string name="top_carrier_title">MIUI Style Carrier Text</string>
    <string name="top_carrier_summary">Enable the carrier text in the statusbar in a style like MIUI **SYSTEMUI WILL RESTART BETWEEN CHANGES**</string>
    <string name="top_carrier_color">MIUI Carrier Text Color</string>
    <string name="stock_carrier_title">Pull Down Carrier Text</string>
    <string name="stock_carrier_summary">Enable/Disable text or choose between stock or custom text **SYSTEMUI WILL RESTART BETWEEN CHANGES**</string>
    <string name="stock_carrier_color">Pull Down Carrier Text Color</string>
    <string name="notification_alpha_title">Notification Transparency</string>
    <string name="notification_color_title">Notification Color</string>
    <string name="toggle_style_title">Toggle style</string>
    <string name="toggle_style_summary">Whether to show icons or text on your toggles.</string>
    <string name="toggles_layout_title">Toggles layout</string>
    <string name="enabled_toggles_title">Enabled toggles</string>
    <string name="enabled_toggles_summary">Choose toggles to display</string>
    <string name="toggles_order_title">Toggle order</string>
    <string name="toggles_order_summary">Choose the order which your toggles are displayed</string>
    <string name="brightness_location_title">Brightness location</string>
    <string name="signal_style">Signal Text Style</string>
    <string name="signal_style_summary">Change the display of the network signal in the statusbar.</string>
    <string name="signal_color_title">Signal color</string>
    <string name="hide_signal_title">Hide signal bars</string>
    <string name="hide_signal_summary">Will also hide data indicator for now. Will be able to separate later.</string>
    <string name="wifi_signal_style">Wifi signal style</string>
    <string name="wifi_signal_style_summary">Change the display of the wifi signal in the statusbar.</string>
    <string name="wifi_signal_color_title">Wifi text color</string>
    <string name="pt_performance">Performance</string>
    <string name="ps_performance">Set CPU, free memory &amp; customize start-up settings.</string>
    <string name="propmodder_title">PropModder &amp; Init.D tweaks</string>
    <string name="propmodder_title_summary">Edit build prop settings and init.d tweak settings</string>
    <string name="donate_roman">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MZD7JLRX6P99Y</string>
    <string name="donate_whitehawk">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=8W7F2Y7S7KRM6</string>
    <string name="donate_zaph">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=AW4DJFL3UWKS2</string>
    <string name="donate_protekk">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=YJTUMSBC2TRHS</string>
    <string name="donate_khasmek">http://nyan.cat</string>
    <string name="donate_sethyx">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=5R4DYJLDYDRAU</string>
    <string name="devs">Developers</string>
    <string name="aokp">Android Open Kang Project</string>
    <string name="aokp_website_title">AOKP Website</string>
    <string name="aokp_website_summary">www.aokp.co - Find all newest releases here.</string>
    <string name="aokp_source_title">AOKP Source</string>
    <string name="aokp_source_summary">AOKP is fully open source. You can always check out the latest source at github.com/aokp</string>
    <string name="aokp_irc_title">Join us on IRC</string>
    <string name="aokp_irc_summary">#teamkang @ irc.freenode.net</string>
    <string name="about_aokp">About AOKP &amp; #teamkang</string>
    <string name="about_aokp_summary">@null</string>
    <string name="blackice">BlackICE AOKP source infused</string>
    <string name="blackice_summary">@null</string>
    <string name="black_ice">Black ICE</string>
    <string name="thanks_to_aokp">Thank you to #teamkang</string>
    <string name="black_ice_thanks">For there amazing source code and for allow us all to build from it. If your running Black ICE please consider donating or stopping by #teamkang sites first &amp; thank &amp; donate to them first please! For without them Black ICE would not exist right now! Except on roadways.</string>
    <string name="donate_travis">http://goo.gl/t2Cd6</string>
    <string name="donate_andrew">http://goo.gl/LNQtx</string>
    <string name="themer">Theme control</string>
    <string name="mmsettings">MasturMods Settings</string>
    <string name="backup_category_title">Backup</string>
    <string name="restore_category_title">Restore</string>
    <string name="theme_category_title">Theme</string>
    <string name="backup_title">Backup BlackICE settings</string>
    <string name="backup_summary">save your settings</string>
    <string name="restore_title">Restore BlackICE settings</string>
    <string name="restore_summary">apply your backup</string>
</resources>