<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:aokp="http://schemas.android.com/apk/res/com.blackice.control">	
	
	<PreferenceCategory
		android:key="aokp"
		android:title="@string/aokp">

		<Preference
			android:key="aokp_website"
			android:title="@string/aokp_website_title"
			android:summary="@string/aokp_website_summary" />

		<Preference
			android:key="aokp_source"
			android:title="@string/aokp_source_title"
			android:summary="@string/aokp_source_summary" />

		<Preference
			android:key="aokp_irc"
			android:title="@string/aokp_irc_title"
			android:summary="@string/aokp_irc_summary" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="devs"
		android:title="@string/devs">
		<com.blackice.control.widgets.DeveloperPreference
			android:title="Roman"
			aokp:twitterHandle="romanbb"
			aokp:donateLink="@string/donate_roman" />

		<com.blackice.control.widgets.DeveloperPreference
			android:title="Whitehawkx"
			aokp:twitterHandle="whitehawkx"
			aokp:donateLink="@string/donate_whitehawk" />

		<com.blackice.control.widgets.DeveloperPreference
			android:title="Zaphod-Beeble"
			aokp:twitterHandle="Dont_Panic_Zaph"
			aokp:donateLink="@string/donate_zaph" />

		<com.blackice.control.widgets.DeveloperPreference
			android:title="Jonathan Grigg"
			aokp:twitterHandle="jonathongrigg" />

		<com.blackice.control.widgets.DeveloperPreference
			android:title="ProTekk"
			aokp:twitterHandle="protekk"
			aokp:donateLink="@string/donate_protekk" />

		<com.blackice.control.widgets.DeveloperPreference
			android:title="Khas Mek"
			aokp:twitterHandle="KhasMek"
			aokp:donateLink="@string/donate_khasmek" />

		<com.blackice.control.widgets.DeveloperPreference
			android:title="sethyx"
			aokp:twitterHandle="sethyx"
			aokp:donateLink="@string/donate_sethyx" />
	</PreferenceCategory>

</PreferenceScreen>
