<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="enable_nav_bar"
        android:title="Enable bar" />

    <PreferenceCategory
        android:key="navbar_style_entries"
        android:title="navbar style entries">

        <ListPreference
            android:entries="@array/pref_navigation_menu_entries"
            android:entryValues="@array/pref_navigation_menu_values"
            android:key="pref_menu_display"
            android:title="@string/title_pref_menu_display"
            android:summary="@string/summary_pref_menu_display" />

        <ListPreference
            android:entries="@array/pref_navigation_menu_display_entries"
            android:entryValues="@array/pref_navigation_menu_display_values"
            android:key="navbar_menu_display"
            android:title="@string/title_pref_navigation_menu_display"
            android:summary="@string/summary_pref_navigation_menu_display" />

        <ListPreference
            android:entries="@array/navigation_bar_qty_entries"
            android:entryValues="@array/navigation_bar_qty_values"
            android:key="navbar_qty"
            android:title="@string/navbar_qty_title"
            android:summary="@string/navbar_qty_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="navbar_buttons"
        android:title="@string/navbar_button_cat">

    </PreferenceCategory>

    <PreferenceCategory
        android:key="navbar_color"
        android:title="navbar btns color &amp; transparency">

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="nav_button_background_color"
            android:title="@string/nav_button_background_color_title"
            android:summary="@string/nav_button_background_color_summary"
            android:defaultValue="#FF000000" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="nav_button_color"
            android:title="@string/navigation_bar_tint_title"
            android:summary="@string/navigation_bar_tint_summary"
            android:defaultValue="#FFFFFF" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="nav_button_glow_color"
            android:title="@string/navigation_bar_glow_tint_title"
            android:summary="@string/navigation_bar_glow_tint_summary"
            android:defaultValue="#FFFFFF" />

        <com.blackice.control.widgets.SeekBarPreference
            android:key="button_transparency"
            android:title="@string/button_transparency_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced_cat"
        android:title="@string/advanced_settings">

        <ListPreference
            android:key="glow_times"
            android:entries="@array/glow_times_entries"
            android:entryValues="@array/glow_times_values"
            android:title="@string/glow_times_title"
            android:defaultValue="100|10"
            android:persistent="false" />" />

        <ListPreference
            android:key="navigation_bar_width"
            android:entries="@array/navigation_bar_width_entries"
            android:entryValues="@array/navigation_bar_width"
            android:title="@string/navigation_bar_width_title"
            android:summary="@string/navigation_bar_width_summary" />

        <ListPreference
            android:key="navigation_bar_height"
            android:entries="@array/navigation_bar_height_entries"
            android:entryValues="@array/navigation_bar_height"
            android:title="@string/navigation_bar_height_title"
            android:summary="@string/navigation_bar_height_summary" />

        <CheckBoxPreference
            android:key="combined_bar_auto_hide"
            android:title="@string/combined_bar_auto_hide_title"
            android:summary="@string/combined_bar_auto_hide_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="navbar_widgets"
        android:title="@string/navbar_widgets">

    </PreferenceCategory>

</PreferenceScreen>
