<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="custom carrier options">

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <ListPreference
            android:key="top_carrier"
            android:entries="@array/top_carrier_entries"
            android:entryValues="@array/top_carrier_values"
            android:title="@string/top_carrier_title"
            android:summary="@string/top_carrier_summary" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="top_carrier_color" 
            android:title="@string/top_carrier_color" 
            android:defaultValue="#33B5E5" />

        <ListPreference
            android:key="stock_carrier"
            android:entries="@array/stock_carrier_entries"
            android:entryValues="@array/stock_carrier_values"
            android:title="@string/stock_carrier_title"
            android:summary="@string/stock_carrier_summary" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="stock_carrier_color" 
            android:title="@string/stock_carrier_color" 
            android:defaultValue="#33B5E5" />

    </PreferenceCategory>

    <PreferenceCategory android:title="statusbar &amp; notification tweaks">

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_bar_color" 
            android:title="Statusbar Color" 
            android:defaultValue="#000000" />

        <com.blackice.control.widgets.SeekBarPreference
            android:key="notification_alpha"
            android:title="@string/notification_alpha_title" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="notification_color" 
            android:title="@string/notification_color_title" 
            android:defaultValue="#FFFFFF" />

    </PreferenceCategory>

    <PreferenceCategory android:title="status bar expanded settings">

        <CheckBoxPreference
            android:key="settings_behavior"
            android:title="@string/title_settings_behavior"
            android:summary="@string/summary_settings_behavior" />

        <CheckBoxPreference
            android:key="auto_hide_toggles"
            android:title="@string/title_auto_hide_toggles"
            android:summary="@string/summary_auto_hide_toggles" />

        <CheckBoxPreference
            android:key="status_bar_brightness_toggle"
            android:title="@string/title_status_bar_brightness_toggle"
            android:summary="@string/summary_status_bar_brightness_toggle" />

        <CheckBoxPreference 
            android:key="adb_icon" 
            android:title="@string/adb_icon_title" />
            
        <CheckBoxPreference
            android:key="date_opens_calendar"
            android:title="@string/date_opens_calendar" />

        <ListPreference
            android:key="status_bar_layout"
            android:title="@string/statusbar_layout"
            android:summary="@string/statusbar_layout_summary"
            android:entries="@array/statusbar_layout_entries"
            android:entryValues="@array/statusbar_layout_values" />

    </PreferenceCategory>

</PreferenceScreen>
