<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The LiquidSmoothROMs Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/backup_category_title">

        <PreferenceScreen
            android:key="backup"
            android:title="@string/backup_title"
            android:summary="@string/backup_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/restore_category_title">

        <PreferenceScreen
            android:key="restore"
            android:title="@string/restore_title"
            android:summary="@string/restore_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="theme_cat"
        android:title="@string/theme_category_title">
    <!-- we leave this blank and draw the PreferenceScreens for themes
         dynamically as found within the class -->
    </PreferenceCategory> -->

</PreferenceScreen>
