<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:blackice="http://schemas.android.com/apk/res/com.blackice.control">

    <PreferenceCategory android:title="toggles style">

        <com.scheffsblend.smw.Preferences.ImageListPreference
            android:entries="@array/toggles_layout_entries"
            android:entryValues="@array/toggles_layout_entries"
            blackice:entryImages="@array/toggles_layout_images"
            blackice:summaryImage="@drawable/toggle_layout_summary"
            android:key="toggles_layout_preference"
            android:title="@string/toggles_layout_title" />

        <Preference
            android:key="enable_toggles"
            android:title="@string/enabled_toggles_title"
            android:summary="@string/enabled_toggles_summary" />

        <Preference
            android:key="toggles"
            android:title="@string/toggles_order_title"
            android:summary="@string/toggles_order_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced_cat"
        android:title="@string/advanced_settings">

        <ListPreference
            android:entries="@array/toggle_style_entries"
            android:entryValues="@array/toggle_style_values"
            android:key="toggle_style"
            android:summary="@string/toggle_style_summary"
            android:title="@string/toggle_style_title" />

        <ListPreference
            android:entries="@array/brightness_location_entries"
            android:entryValues="@array/brightness_location_values"
            android:key="brightness_location"
            android:title="@string/brightness_location_title" />

        <Preference
            android:key="reset_toggles"
            android:title="Reset toggles">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
